--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,117 +48,98 @@ jobs:
           echo "model_path_file=$env:RUNNER_TEMP\model_path.txt" >> $env:GITHUB_OUTPUT
           echo "base64_file=$env:RUNNER_TEMP\image_base64.txt" >> $env:GITHUB_OUTPUT
 
+      # 4. Prepare project files
       - name: Prepare project directory
         id: prepare-project
         run: |
-          # 设置项目目录路径
-          $projectDir = "project"
-          
-          # 获取模型路径
           $modelPath = Get-Content "$env:RUNNER_TEMP\model_path.txt"
-          
-          # 复制模型目录结构到项目目录
+          $projectDir = "project"
           New-Item -Type Directory -Path $projectDir -Force
+          
+          # 复制整个模板目录结构
           $sourceTemplateDir = Split-Path $modelPath -Parent
+          Copy-Item "$sourceTemplateDir\*" $projectDir -Recurse -Force
           
-          # 递归复制所有文件和文件夹
-          $filesCopied = 0
-          $directories = Get-ChildItem -Path $sourceTemplateDir -Recurse
-          foreach ($item in $directories) {
-              $relativePath = $item.FullName.Substring($sourceTemplateDir.Length + 1)
-              $targetPath = Join-Path $projectDir $relativePath
-              
-              if ($item.PSIsContainer) {
-                  New-Item -ItemType Directory -Path $targetPath -Force | Out-Null
-              } else {
-                  Copy-Item -Path $item.FullName -Destination $targetPath -Force
-                  $filesCopied++
-              }
-          }
-          Write-Output "Copied $filesCopied files to project directory"
-          
-          # 查找FPRJ文件
-          $fprjFiles = @(Get-ChildItem -Path $projectDir -Filter "*.fprj" -Recurse)
-          Write-Output "Found $($fprjFiles.Count) FPRJ files in project directory"
-          
-          if ($fprjFiles.Count -eq 0) {
-              Write-Error "No FPRJ file found in project directory."
+          # 查找并重命名FPRJ文件
+          $fprjFile = Get-ChildItem $projectDir -Filter "*.fprj" -Recurse | Select-Object -First 1
+          if ($fprjFile) {
+              $newFprjPath = Join-Path $fprjFile.Directory "fprj.fprj"
+              Rename-Item $fprjFile.FullName $newFprjPath -Force
+              Write-Output "Renamed project file: $($fprjFile.FullName) -> $newFprjPath"
+          } else {
+              Write-Error "No FPRJ file found"
               exit 1
           }
           
-          # 重命名第一个找到的FPRJ文件
-          $fprjOriginal = $fprjFiles[0]
-          $newName = "fprj.fprj"
-          $newPath = Join-Path $fprjOriginal.Directory $newName
-          Rename-Item -Path $fprjOriginal.FullName -NewName $newName -Force
-          Write-Output "Renamed project file: $($fprjOriginal.FullName) -> $newPath"
-          
-          # 保存Base64图片到正确的路径
+          # 获取Base64内容
           $base64Content = Get-Content "${{ steps.parse-input.outputs.base64_file }}" -Raw
-          $bytes = [Convert]::FromBase64String($base64Content)
           
-          # 获取fprj文件所在目录
-          $fprjDir = Split-Path $newPath -Parent
-          
-          # 创建images目录（如果不存在）
-          $imagesDir = Join-Path $fprjDir "images"
-          New-Item -ItemType Directory -Path $imagesDir -Force
-          
-          # 保存背景图
-          $picPath = Join-Path $imagesDir "pic.png"
-          [IO.File]::WriteAllBytes($picPath, $bytes)
-          
-          # 保存预览图
-          $prePath = Join-Path $imagesDir "pre.png"
-          [IO.File]::WriteAllBytes($prePath, $bytes)
-          
-          Write-Output "Saved background image to: $picPath"
-          Write-Output "Saved preview image to: $prePath"
+          # 检查Base64数据长度
+          if ($base64Content.Length -lt 100) {
+              Write-Warning "Base64 data is too short: $($base64Content.Length) characters. Using default image."
+          } else {
+              try {
+                  # 解码Base64数据
+                  $bytes = [Convert]::FromBase64String($base64Content)
+                  
+                  # 查找images目录
+                  $imagesDir = Get-ChildItem $projectDir -Filter "images" -Recurse | Select-Object -First 1
+                  if (-not $imagesDir) {
+                      $imagesDir = Join-Path $projectDir "images"
+                      New-Item -Type Directory -Path $imagesDir -Force
+                  }
+                  
+                  # 保存背景图
+                  $picPath = Join-Path $imagesDir.FullName "pic.png"
+                  [IO.File]::WriteAllBytes($picPath, $bytes)
+                  Write-Output "Saved background image to: $picPath"
+                  
+                  # 保存预览图
+                  $prePath = Join-Path $imagesDir.FullName "pre.png"
+                  Copy-Item $picPath $prePath -Force
+                  Write-Output "Saved preview image to: $prePath"
+              } catch {
+                  Write-Warning "Failed to process image data: $_"
+              }
+          }
           
           # 创建输出目录
           New-Item -Type Directory -Path "$projectDir\output" -Force
           
           # 输出路径变量
           echo "project_path=$projectDir" >> $env:GITHUB_OUTPUT
-          echo "fprj_path=$newPath" >> $env:GITHUB_OUTPUT
-          echo "preview_path=$prePath" >> $env:GITHUB_OUTPUT
-      
-      # 5. Set up Python with Pillow
+          echo "fprj_path=$newFprjPath" >> $env:GITHUB_OUTPUT
+
+      # 5. Set up Python
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      
+
+      # 6. Install Pillow for image processing
       - name: Install dependencies
         run: pip install Pillow
 
-      # 6. Compile watch face
+      # 7. Run compilation script
       - name: Compile Watch Face
-        id: compile-watchface
         env:
           PROJECT_PATH: "${{ steps.prepare-project.outputs.fprj_path }}"
           OUTPUT_DIR: "${{ github.workspace }}/output"
-          IMAGE_BASE64: "${{ steps.parse-input.outputs.base64_file }}"
-        run: |
-          # 确保Python脚本使用最新版本
-          Get-Content compile_watchface.py | Out-String
-          python compile_watchface.py
-        shell: pwsh
-
-      # 7. Verify output
+        run: python compile_watchface.py
+      
+      # 8. Verify output
       - name: Verify Output File
         id: verify-output
         run: |
-          $outputDir = "${{ github.workspace }}/output"
-          $file = Get-ChildItem $outputDir -Filter "*.face"
+          $file = Get-ChildItem "${{ github.workspace }}/output" -Filter "*.face"
           if ($file) {
               echo "face_file=$($file.FullName)" >> $env:GITHUB_OUTPUT
           } else {
               Write-Error "Output file not found"
               exit 1
           }
-
-      # 8. Create Release
+      
+      # 9. Create Release
       - name: Create Release
         id: create-release
         uses: softprops/action-gh-release@v2
@@ -170,13 +151,13 @@ jobs:
           draft: false
           prerelease: false
 
-      # 9. Pass release data
+      # 10. Pass release data
       - name: Store Release Data
         id: pass-data
         run: |
           echo "release_id=${{ steps.create-release.outputs.id }}" >> $env:GITHUB_OUTPUT
           echo "release_tag=face-${{ github.run_id }}" >> $env:GITHUB_OUTPUT
-
+    
     outputs:
       release_id: ${{ steps.pass-data.outputs.release_id }}
       release_tag: ${{ steps.pass-data.outputs.release_tag }}
@@ -188,7 +169,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      # 1. Wait 10 minutes
+      # 1. Wait 10 minutes (using native sleep)
       - name: Wait for 10 minutes
         run: sleep 600
       
