--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Watch Face Generator with Auto-Cleanup
+name: Watch Face Generator with Auto-Cleanup and Preview Fix
 
 on:
   repository_dispatch:
@@ -14,7 +14,6 @@ jobs:
     runs-on: windows-latest
     permissions:
       contents: write
-    timeout-minutes: 15
       
     steps:
       # 1. Checkout code
@@ -24,12 +23,11 @@ jobs:
       # 2. Increase virtual memory
       - name: Increase virtual memory to 16GB
         run: |
-          wmic computersystem set AutomaticManagedPagefile=False || echo "AutomaticManagedPagefile already disabled"
-          wmic pagefileset create name="C:\pagefile.sys" || echo "Pagefile already exists"
-          wmic pagefileset where name="C:\pagefile.sys" set InitialSize=16384,MaximumSize=16384 || echo "Pagefile size already set"
+          wmic computersystem set AutomaticManagedPagefile=False
+          wmic pagefileset create name="C:\pagefile.sys"
+          wmic pagefileset where name="C:\pagefile.sys" set InitialSize=16384,MaximumSize=16384
           wmic pagefileset list brief
           echo "Virtual memory increased to 16GB"
-        shell: cmd
 
       # 3. Process input data
       - name: Parse input JSON
@@ -48,105 +46,130 @@ jobs:
           echo "model_path_file=$env:RUNNER_TEMP\model_path.txt" >> $env:GITHUB_OUTPUT
           echo "base64_file=$env:RUNNER_TEMP\image_base64.txt" >> $env:GITHUB_OUTPUT
 
-            # 4. Prepare project directory
       - name: Prepare project directory
         id: prepare-project
         run: |
           # 设置项目目录路径
           $projectDir = "project"
+          $fprjFile = "fprj.fprj"
           
-          # 获取模型路径
+          # 复制模型到项目目录
           $modelPath = Get-Content "$env:RUNNER_TEMP\model_path.txt"
-          
-          # 复制模型目录结构到项目目录
           New-Item -Type Directory -Path $projectDir -Force
-          $sourceTemplateDir = Split-Path $modelPath -Parent
-          Copy-Item -Path "$sourceTemplateDir\*" -Destination $projectDir -Recurse -Force
+          Copy-Item "$(Split-Path $modelPath -Parent)\*" $projectDir -Recurse
           
-          # 查找FPRJ文件
-          $fprjFiles = @(Get-ChildItem -Path $projectDir -Filter "*.fprj" -Recurse)
-          if ($fprjFiles.Count -eq 0) {
-              Write-Error "No FPRJ file found in project directory."
+          # 重命名FPRJ文件 (修复了重命名语法)
+          $fprjOriginal = Get-ChildItem $projectDir -Filter "*.fprj" | Select-Object -First 1
+          if ($fprjOriginal) {
+              # 使用 -NewName 参数而不是路径连接
+              Rename-Item -Path $fprjOriginal.FullName -NewName $fprjFile -Force
+              
+              # 更新路径变量
+              $fprjPath = Join-Path $projectDir $fprjFile
+              Write-Output "Successfully renamed project file to: $fprjPath"
+          } else {
+              Write-Error "No FPRJ file found"
               exit 1
           }
           
-          # 重命名第一个找到的FPRJ文件
-          $fprjOriginal = $fprjFiles[0]
-          $newName = "fprj.fprj"
-          $newPath = Join-Path $fprjOriginal.Directory $newName
-          Rename-Item -Path $fprjOriginal.FullName -NewName $newName -Force
-          Write-Output "Renamed project file: $($fprjOriginal.FullName) -> $newPath"
+          # 保存Base64图片到项目目录
+          $bytes = [Convert]::FromBase64String((Get-Content "${{ steps.parse-input.outputs.base64_file }}" -Raw))
+          $watchfacePicPath = Join-Path $projectDir "pic.png"
+          [IO.File]::WriteAllBytes($watchfacePicPath, $bytes)
           
-          # 保存Base64图片到正确的路径
-          $base64Content = Get-Content "${{ steps.parse-input.outputs.base64_file }}" -Raw
-          $bytes = [Convert]::FromBase64String($base64Content)
-          
-          # 获取fprj文件所在目录
-          $fprjDir = Split-Path $newPath -Parent
-          
-          # 创建images目录（如果不存在）
-          $imagesDir = Join-Path $fprjDir "images"
-          New-Item -ItemType Directory -Path $imagesDir -Force
-          
-          # 保存背景图
-          $picPath = Join-Path $imagesDir "pic.png"
-          [IO.File]::WriteAllBytes($picPath, $bytes)
-          Write-Output "Saved background image to: $picPath"
-          
-          # 保存预览图
-          $prePath = Join-Path $imagesDir "pre.png"
-          [IO.File]::WriteAllBytes($prePath, $bytes)
-          Write-Output "Saved preview image to: $prePath"
+          # 同时复制一份作为预览图（pre.png）
+          $previewPath = Join-Path $projectDir "pre.png"
+          Copy-Item $watchfacePicPath $previewPath -Force
           
           # 创建输出目录
           New-Item -Type Directory -Path "$projectDir\output" -Force
           
-          # 输出路径变量
+          # 记录项目路径
           echo "project_path=$projectDir" >> $env:GITHUB_OUTPUT
-          echo "fprj_path=$newPath" >> $env:GITHUB_OUTPUT
-          echo "preview_path=$prePath" >> $env:GITHUB_OUTPUT
-      
+          echo "fprj_path=$fprjPath" >> $env:GITHUB_OUTPUT
+          echo "preview_path=$previewPath" >> $env:GITHUB_OUTPUT
+
       # 5. Set up Python with Pillow
-      - name: Set up Python 3.10
+      - name: Set up Python 3.10 and Pillow
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      
       - name: Install Pillow for image resizing
         run: pip install Pillow
 
-      # 6. Compile watch face
-      - name: Compile Watch Face
+      # 6. Run compilation script with error handling
+      - name: Compile Watch Face (with retry)
         id: compile-watchface
         env:
           PROJECT_PATH: "${{ steps.prepare-project.outputs.fprj_path }}"
           OUTPUT_DIR: "${{ github.workspace }}/output"
-        run: python compile_watchface.py
-      
-      
+        run: |
+          # 错误处理函数
+          function Handle-PreviewError {
+            param($errorOutput)
+            
+            # 检查是否是预览尺寸错误
+            if ($errorOutput -match 'Preview has wrong size: (\d+)x(\d+), expected: (\d+)x(\d+)') {
+              $expectedWidth = $Matches[3]
+              $expectedHeight = $Matches[4]
+              
+              # 获取预览图路径
+              $previewPath = "${{ steps.prepare-project.outputs.preview_path }}"
+              
+              # 使用Python调整图片尺寸
+              python -c "`
+                from PIL import Image; `
+                img = Image.open(r'$previewPath'); `
+                img = img.resize(($expectedWidth, $expectedHeight)); `
+                img.save(r'$previewPath'); `
+                print(f'Resized preview to {expectedWidth}x{expectedHeight}')"
+                
+              return $true
+            }
+            return $false
+          }
+          
+          # 首次尝试编译
+          echo "First compilation attempt..."
+          python compile_watchface.py 2>&1 | Tee-Object -Variable output
+          if ($LASTEXITCODE -eq 0) {
+            echo "Compilation succeeded on first attempt"
+            exit 0
+          }
+          
+          # 尝试处理预览尺寸错误
+          if (Handle-PreviewError $output) {
+            # 重新编译
+            echo "Retrying compilation after resizing preview..."
+            python compile_watchface.py
+            if ($LASTEXITCODE -eq 0) {
+              echo "Compilation succeeded after preview fix"
+              exit 0
+            } else {
+              # 第二次编译失败
+              echo "Compilation failed even after preview fix"
+              exit 1
+            }
+          }
+          
+          # 无法识别的错误类型
+          echo "Compilation failed for unknown reasons"
+          exit 1
 
-
-
-      # 7. Run compilation script
-      - name: Compile Watch Face
-        env:
-          PROJECT_PATH: "${{ steps.prepare-project.outputs.fprj_path }}"
-          OUTPUT_DIR: "${{ github.workspace }}/output"
-        run: python compile_watchface.py
-      
-      # 8. Verify output
+      # 7. Verify output
       - name: Verify Output File
         id: verify-output
         run: |
-          $file = Get-ChildItem "${{ github.workspace }}/output" -Filter "*.face"
+          $outputDir = "${{ github.workspace }}/output"
+          $file = Get-ChildItem $outputDir -Filter "*.face"
           if ($file) {
               echo "face_file=$($file.FullName)" >> $env:GITHUB_OUTPUT
           } else {
               Write-Error "Output file not found"
               exit 1
           }
-      
-      # 9. Create Release
+
+      # 8. Create Release
       - name: Create Release
         id: create-release
         uses: softprops/action-gh-release@v2
@@ -158,13 +181,13 @@ jobs:
           draft: false
           prerelease: false
 
-      # 10. Pass release data
+      # 9. Pass release data
       - name: Store Release Data
         id: pass-data
         run: |
           echo "release_id=${{ steps.create-release.outputs.id }}" >> $env:GITHUB_OUTPUT
           echo "release_tag=face-${{ github.run_id }}" >> $env:GITHUB_OUTPUT
-    
+
     outputs:
       release_id: ${{ steps.pass-data.outputs.release_id }}
       release_tag: ${{ steps.pass-data.outputs.release_tag }}
